--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^20.3.1",
     "@types/uuid": "^9.0.2",
     "cors": "^2.8.5",
+    "jest": "^29.6.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
