--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,6 @@ dist
 
 # SvelteKit build / generate output
 .svelte-kit
-.idea
+.idea/
 # End of https://www.toptal.com/developers/gitignore/api/node
 config/config.ts
