--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.7.0",
     "mysql2": "^3.4.2",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
